# Bot

./: .gitignore  LICENSE  README.md  dpsk.py
ChatBot/: api.txt  demo.bat
ChatBot/JMBot/: .env  .env.prod  README.md  bot.py  cls_cache.py  pyproject.toml  test_client.py
ChatBot/JMBot/jmbot/plugins/demoplugin/: __init__.py
ChatBot/JMBot/plugins/jm_image2pdf/: __init__.py  config.py
JMService/: app.py  test_client.py
JMService/utils/: config.yml  controver.py
